--- a/index.html
+++ b/index.html
@@ -62,11 +62,23 @@
                     <div class="description">
                         <div>Film</div><br />
                         A set of visual effects shots my friend and I were assigned to work on.
-                        <br />
+                        <br /><br />
                         A 3D model was used to compose the exterior elements of the space ship.
                     </div>
                     <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/SI_blur.jpg')"></div></div>
                     <div class="gallery"><iframe class="video" src="//www.youtube.com/embed/IBm8ktlMb5k" frameborder="0" allowfullscreen></iframe></div>
+                </div>
+            </div>
+            <div class="project clickable item1 col-lg-4 col-sm-4 col-xs-12 film animation">
+                <div class="project-content"  style="background-image: url('projects/video/roosevelt.jpg');">
+                    <div class="description">
+                        <div>Film/<br/>Animation</div><br />
+                        Project Roosevelt, a short action film which I worked on.
+                        <br /><br />
+                        I created and textured a 3D model of a safe (seen in the first shot) and motion tracked it into the scene. I also designed and set up camera rigs which were used in the production of this film.
+                    </div>
+                    <div class="desc-bg-container"><div class="desc-bg" style="background-image: url('projects/video/roosevelt_blur.jpg')"></div></div>
+                    <div class="gallery"><iframe class="video" src="//www.youtube.com/embed/I_llkXGkomk" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
             <div class="project clickable item2 col-lg-8 col-sm-8 col-xs-12 animation">
